--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vue/vue3-jest": "^27.0.0",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
@@ -13,5 +15,11 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "vue": "^3.5.13",
+        "vue-loader": "^17.3.1",
+        "vue-router": "^4.0.13",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
