--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.5.3",
+        "sass-embedded": "^1.85.0",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "sweetalert2": "^11.17.2",
+        "uuid": "^11.1.0",
         "vue": "^3.5.13",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13",
